K8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-api
  namespace: demo-api
  annotations:
      service.beta.kubernetes.io/azure-load-balancer-resource-group: MC_Diplomado_demoapi-aks_westus3
      service.beta.kubernetes.io/azure-pip-name: demo-api-ip
spec:
  type: LoadBalancer  
  selector:
    app: demo-api
  ports:
  - port: 80
    targetPort: 8080
